--- a/02_IntruducaoaoCSS/01_IntroCSS.html
+++ b/02_IntruducaoaoCSS/01_IntroCSS.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução CSS</title>
-    <link rel="stylesheet" href="01_introCSS.css"
+   <link rel="stylesheet" href="01_introCSS.css">
+
+   <!-- <style>
+        p{
+            color: red;
+        }
+
+        a{
+            color: blue;
+            text-decoration: none;
+        }
+
+   </style> -->
+
 </head>
 <body>
     <h1>Introdução ao CSS</h1>
-    <p>
+    <p style="color: black;">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut malesuada massa nec nunc vulputate, sed tristique turpis placerat.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut malesuada massa nec nunc vulputate, sed tristique turpis placerat.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut malesuada massa nec nunc vulputate, sed tristique turpis placerat.
