--- a/03_BoxModel/02_marginauto.html
+++ b/03_BoxModel/02_marginauto.html
@@ -29,7 +29,7 @@
 
 </head>
 <body>
-<!-- Margin AUto é bom para conseguir centralizar os elementos de maneira mais fácil -->
+<!-- Margin AUto é bom para conseguir centralizar os elementos de maneira mais facil -->
     <H1>Margin Auto</H1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae commodi porro, excepturi illum minima velit! Suscipit, harum dolores magni dolorum eaque corporis asperiores sed id.</p>
