--- a/03_BoxModel/07_exercicio_curriculo.html
+++ b/03_BoxModel/07_exercicio_curriculo.html
@@ -17,31 +17,42 @@
 
     <h2>Experiência Profissional</h2>
 
-    <h3><a href="https://google.com">UOL</a> - 12/2014 até 02/2015 - 2 meses</h3>
-    <p>Analista Programador - 2 meses</p>
+    <h3><a href="https://google.com" target="_blank">UOL</a> - 12/2014 até 02/2015 - 2 meses</h3>
+    <h4>Analista Programador - 2 meses</h4>
     <p>Desenvolvimento de aplicações web com HTML, CSS, AngularJS, JavaScript, AJAX</p>
 
-    <h3><a href="https://google.com">TERRA</a> - 1 Ano</h3>
-    <p>Desenvolvedor Front-End - 1 Ano</p>
+    <h3><a href="https://google.com" target="_blank">TERRA</a> - 1 Ano</h3>
+    <h4>Desenvolvedor Front-End - 1 Ano</h4>
     
     <p>Atuei como Desenvolvedor Front-End, participando ativamente em todos os projetos e bla bla bla</p>
     <p>Trabalhei Efetivamente usando tecnologias como HTML5, CSS, AngularJS ...</p>
 
-    <h3><a href="https://google.com">G1</a> - 6 Meses</h3>
-    <p>Desenvolvedor Front-End - 6 Meses</p>
+    <h3><a href="https://google.com" target="_blank">G1</a> - 6 Meses</h3>
+    <h4>Desenvolvedor Front-End - 6 Meses</h4>
     <p>Trabalhando om Portais, landing page, e eCommerce, codando manualmente HTML, CSS, JavaScript e .....</p>
 
     <h2>Formação</h2>
-    <h3>Graduação em Tecnologia da Informação<h3>
+    <h3>Graduação em Tecnologia da Informação</h3>
     <p>01/2010 a 12/2012</p>
     <p>Faculdade da Vida</p>
-    <p >Pós Graduação em Projetos computacionais e tecnologias Front-End.</p>
+    <h3>Pós Graduação em Projetos computacionais e tecnologias Front-End.</h3>
     <p>08/2014 a 12/2015</p>
     <p>Faculdade da Vida</p>
 
     <h2>Cursos / Especializações</h2>
     <ul>
         <li></li>
+        <li></li>
     </ul>
+
+    <h3>HTML5</h3>
+    <p>bla bla</p>
+
+    <h3>JavaScript</h3>
+    <p>bla bla</p>
+
+    <h3>css3</h3>
+    <p>bla bla</p>
+    
 </body>
 </html>
