--- a/03_BoxModel/07_exercicio_curriculo.html
+++ b/03_BoxModel/07_exercicio_curriculo.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>João da Silva</h1>
-    <p>Brasileiro, solteiro, 30 anos.</p>
+    <p class="centraliza">Brasileiro, solteiro, 30 anos.</p>
 
     <h2>Objetivo</h2>
     <p>Front-End Developer, Desenvolvedor Front-End, Webdesigner</p>
@@ -41,18 +41,17 @@
 
     <h2>Cursos / Especializações</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>Participações no evento Search Masters Brasil - São Paulo (2014).</li>
+        <li> Certificado em Google Adwords - Google Partners Weekend (2015).</li>
     </ul>
 
     <h3>HTML5</h3>
-    <p>bla bla</p>
+    <p>Serfrontend - 40h - 2022</p>
 
     <h3>JavaScript</h3>
-    <p>bla bla</p>
+    <p>Serfrontend - 40h - 2022</p>
 
-    <h3>css3</h3>
-    <p>bla bla</p>
+    <h3>CSS3</h3>
     
 </body>
 </html>
