Correção linha Projeto Plano

--- a/10_Projeto_Escolhaseuplano/index.html
+++ b/10_Projeto_Escolhaseuplano/index.html
@@ -44,7 +44,7 @@
                 <li>5 Website</li>
                 <li>3GB de Armazenamento</li>
                 <li>Transferência Ilimitada</li>
-                <li>10 Horas de Suporte mensais/li>
+                <li>10 Horas de Suporte mensais</li>
             </ul>
             <a href="#" class="pricing-plan__cta">Assine Já</a>
         </div>
