Continuação Desafio Flexbox

--- a/11_Projeto_Desafio_Flexbox/index.html
+++ b/11_Projeto_Desafio_Flexbox/index.html
@@ -13,7 +13,7 @@
 
     <header class="top">
         <h1>Cursos Serfrontend</h1>
-        <p>Tudo o que precisa para iniciar na carreira</p>
+        <p>Tudo o que precisa saber para iniciar na carreira</p>
     </header>
 
     <section class="team">
