--- a/11_Projeto_Desafio_Flexbox/index.html
+++ b/11_Projeto_Desafio_Flexbox/index.html
@@ -10,47 +10,45 @@
 </head>
 
 <body>
+   <header class="hero"></header>
+   <div class="hero-content">
+    <h1> Cursos Serfrontend</h1>
+    <p>Tudo o que você precisa saber para iniciar na carreira</p>
+   </div>
 
-    <header class="top">
-        <h1>Cursos Serfrontend</h1>
-        <p>Tudo o que precisa saber para iniciar na carreira</p>
-    </header>
+   <main>
+        <section class="content-section">
+            <div class="card">
+                <img src="imagens/card_01.png" alt="Seletores">
+                <p>Seletores</p>
+            </div>
 
-    <section class="team">
-        <div class="team__card">
-            <img src="imagens/card_01.png" alt="Seletores">
-            <p>Seletores</p>
-        </div>
+            <div class="card">
+                <img src="imagens/card_02.jpg" alt="Posicionamento">
+                <p>Posicionamento</p>
+            </div>
 
-        <div>
-            <img src="imagens/card_02.jpg" alt="Posicionamento">
-            <p>Posicionamento</p>
-        </div>
+            <div class="card">
+                <img src="imagens/card_03.jpg" alt="Fontes">
+                <p>Fontes</p>
+            </div>
 
-        <div>
-            <img src="imagens/card_03.jpg" alt="Fontes">
-            <p>Fontes</p>
-        </div>
+            <div class="card">
+                <img src="imagens/card_04.jpg" alt="FlexBox">
+                <p>FlexBox</p>
+            </div>
 
-        <div>
-            <img src="imagens/card_04.jpg" alt="Flexbox">
-            <p>Flexbox</p>
-        </div>
+            <div class="card">
+                <img src="imagens/card_05.jpg" alt="CSS Grid">
+                <p>CSS Grid</p>
+            </div>
 
-        <div>
-            <img src="imagens/card_05.jpg" alt="Css Grid">
-            <p>Css Grid</p>
-        </div>
-
-        <div>
-            <img src="imagens/card_01.png" alt="Semântica">
-            <p>Semântica</p>
-        </div>
-        
-    </section>
-
-
-
+            <div class="card">
+                <img src="imagens/card_01.png" alt="Semântica">
+                <p>Semântica</p>
+            </div>
+        </section>
+   </main>
 </body>
 
 </html>
