Conclusão Font-Face

--- a/12_Css_parte2/10_font_face.html
+++ b/12_Css_parte2/10_font_face.html
@@ -6,6 +6,8 @@
 
     <style>
 
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+        /* Fontes podem ser importadas pelo próprio Google Font */
 
         @font-face {
                 font-family: nadia; /* É um apelido para fonte, pode usar o alias que quiser.*/
@@ -30,9 +32,16 @@
             font-family: nadia, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
         }
+
+            p{
+                font-family: 'Roboto', sans-serif;
+            }
+
     </style>
 </head>
 <body>
     <h1>Font-Face</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum illo sed facilis architecto perspiciatis dolor ad inventore, et ut officia. Possimus, dignissimos. Dolores, repudiandae tempore?</p>
 </body>
 </html>
