--- a/13_ProjetoAprenser-inicio/index.html
+++ b/13_ProjetoAprenser-inicio/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Projeto - Escola Aprenser</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -22,7 +25,7 @@
     
     <div class="wrapperContainer-hero">
         <section class="container heroBanner">
-            <h1>O saber é o que transforma nosso SER</h1>
+            <h1>O saber é o que transforma nosso <span class="upper">ser</span>.</h1>
             <a href="#" class="btn">Saiba Mais</a>
             <img src="imagens/HeroImage.png" alt="Mulher segurando flores">
         </section>
