--- a/13_ProjetoAprenser-inicio/index.html
+++ b/13_ProjetoAprenser-inicio/index.html
@@ -25,8 +25,10 @@
     
     <div class="wrapperContainer-hero">
         <section class="container heroBanner">
-            <h1>O saber é o que transforma nosso <span class="upper">ser</span>.</h1>
-            <a href="#" class="btn">Saiba Mais</a>
+            <div class="header_content">
+                <h1>O saber é o que transforma nosso <span class="upper">ser</span>.</h1>
+                <a href="#" class="btn">Saiba Mais</a>
+            </div>
             <img src="imagens/HeroImage.png" alt="Mulher segurando flores">
         </section>
     </div>
