--- a/13_ProjetoAprenser-inicio/index.html
+++ b/13_ProjetoAprenser-inicio/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="wrapperContainer-dark">
+    <div class="wrapperContainer wrapperContainer-dark">
         <header class="header container">
             <img src="imagens/logoAprenser.png" alt="logoAprenser">
             <nav class="header_nav">
@@ -23,7 +23,7 @@
         </header>
     </div>
     
-    <div class="wrapperContainer-hero">
+    <div class="wrapperContainer wrapperContainer-hero">
         <section class="container heroBanner">
             <div class="header_content">
                 <h1>O saber é o que transforma nosso <span class="upper">ser</span>.</h1>
@@ -33,9 +33,9 @@
         </section>
     </div>
 
-    <div class="wrapperContainer-light">
+    <div class="wrapperContainer wrapperContainer-light">
         <section id="cursos" class="cursos container">
-            <h2>Principais Cursos</h2>
+            <h2 class="section_title">Principais Cursos</h2>
             <div class="cursosContainer">
                 <article class="curso_card">
                     <img src="imagens/curso-design.png" alt="Curso design">
@@ -61,21 +61,21 @@
                     </div>
                 </article>
             </div>
-            <a href="#" class="btn">Ver mais cursos</a>
+            <a href="#" class="btn section_btn">Ver mais cursos</a>
         </section>
     </div>
 
-    <div class="wrapperContainer-dark2">
+    <div class="wrapperContainer wrapperContainer-dark2">
         <section class="container" id="escola">
             <img src="imagens/nossa-escola.png" alt="Mulher jovem feliz">
-            <h2>Nossa escola</h2>
+            <h2 class="section_title">Nossa escola</h2>
             <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.</p>
         </section>
     </div>
 
-    <div class="wrapperContainer-light">
+    <div class="wrapperContainer wrapperContainer-light">
         <section class="container" id="contatos">
-            <h2>Contatos</h2>
+            <h2 class="section_title">Contatos</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7970.138934150921!2d-40.51731921048459!3d-2.7957512726187015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7e986880741a685%3A0x9e57dad881207f07!2sVila%20de%20Jericoacoara%2C%20Jijoca%20de%20Jericoacoara%20-%20CE!5e0!3m2!1spt-BR!2sbr!4v1692110721941!5m2!1spt-BR!2sbr" 
             width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <address>Av. da Liberdade, 1001<br>
@@ -84,7 +84,7 @@
         </section>
     </div>
 
-    <div class="wrapperContainer-dark">
+    <div class="wrapperContainer wrapperContainer-dark">
         <footer>Desenvolvido por <a href="#">Ricardo</a></footer>
     </div>
 
