Continuacao Projeto Aprenser

--- a/13_ProjetoAprenser-inicio/index.html
+++ b/13_ProjetoAprenser-inicio/index.html
@@ -66,10 +66,12 @@
     </div>
 
     <div class="wrapperContainer wrapperContainer-dark2">
-        <section class="container" id="escola">
+        <section class="container escola" id="escola">
             <img src="imagens/nossa-escola.png" alt="Mulher jovem feliz">
-            <h2 class="section_title">Nossa escola</h2>
-            <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.</p>
+            <div>
+                <h2 class="escola_title">Nossa escola</h2>
+                <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.</p>
+            </div>
         </section>
     </div>
 
@@ -78,14 +80,14 @@
             <h2 class="section_title">Contatos</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7970.138934150921!2d-40.51731921048459!3d-2.7957512726187015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7e986880741a685%3A0x9e57dad881207f07!2sVila%20de%20Jericoacoara%2C%20Jijoca%20de%20Jericoacoara%20-%20CE!5e0!3m2!1spt-BR!2sbr!4v1692110721941!5m2!1spt-BR!2sbr" 
             width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <address>Av. da Liberdade, 1001<br>
+            <address class="contatos_adress">Av. da Liberdade, 1001<br>
                 Tel.: +351 21 123 456<br>
                 E-mail: contato@aprenser.com</address>
         </section>
     </div>
 
     <div class="wrapperContainer wrapperContainer-dark">
-        <footer>Desenvolvido por <a href="#">Ricardo</a></footer>
+        <footer class="footer">Desenvolvido por <a href="#">Ricardo</a></footer>
     </div>
 
 </body>
