Menu fixo - Final Projeto Aprenser

--- a/13_ProjetoAprenser-inicio/index.html
+++ b/13_ProjetoAprenser-inicio/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="wrapperContainer wrapperContainer-dark">
+    <div class="wrapperContainer wrapperContainer-dark wrapperContainer-Fixed">
         <header class="header container">
             <img src="imagens/logoAprenser.png" alt="logoAprenser">
             <nav class="header_nav">
@@ -33,8 +33,8 @@
         </section>
     </div>
 
-    <div class="wrapperContainer wrapperContainer-light">
-        <section id="cursos" class="cursos container">
+    <div class="wrapperContainer wrapperContainer-light wrapperContainer_padded" id="cursos">
+        <section class="cursos container">
             <h2 class="section_title">Principais Cursos</h2>
             <div class="cursosContainer">
                 <article class="curso_card">
@@ -65,8 +65,8 @@
         </section>
     </div>
 
-    <div class="wrapperContainer wrapperContainer-dark2">
-        <section class="container escola" id="escola">
+    <div class="wrapperContainer wrapperContainer-dark2 wrapperContainer_padded" id="escola">
+        <section class="container escola">
             <img src="imagens/nossa-escola.png" alt="Mulher jovem feliz">
             <div>
                 <h2 class="escola_title">Nossa escola</h2>
@@ -75,8 +75,8 @@
         </section>
     </div>
 
-    <div class="wrapperContainer wrapperContainer-light">
-        <section class="container" id="contatos">
+    <div class="wrapperContainer wrapperContainer-light wrapperContainer_padded" id="contatos">
+        <section class="container">
             <h2 class="section_title">Contatos</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7970.138934150921!2d-40.51731921048459!3d-2.7957512726187015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7e986880741a685%3A0x9e57dad881207f07!2sVila%20de%20Jericoacoara%2C%20Jijoca%20de%20Jericoacoara%20-%20CE!5e0!3m2!1spt-BR!2sbr!4v1692110721941!5m2!1spt-BR!2sbr" 
             width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
