--- a/14_Listas_tabelas_details/02_listas_definicao.html
+++ b/14_Listas_tabelas_details/02_listas_definicao.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+    <!-- Serve para criar listas com definição / descrição -->
         <dl>
             <dt>HTML</dt>
             <dd>Linguagem de marcação de hipertexto</dd>
