--- a/14_Listas_tabelas_details/03_tabelas.html
+++ b/14_Listas_tabelas_details/03_tabelas.html
@@ -5,6 +5,62 @@
     <title>Tabelas</title>
 </head>
 <body>
-    
+    <h1>Tabela Normal</h1>
+        <table border="1", width="300">
+            <tr>
+                <td>1A</td><td>1B</td>
+            </tr>
+            <tr>
+                <td>2A</td> <td>2B</td>
+            </tr>
+            <tr>
+                <td>3A</td> <td>3B</td>
+            </tr>
+        </table>
+
+        <h1>Tabela Coluna Mesclada</h1>
+
+        <table border="1", width="300">
+            <tr>
+                <td colspan="2">1A</td>
+            </tr>
+            <tr>
+                <td>2A</td> <td>2B</td>
+            </tr>
+            <tr>
+                <td>3A</td> <td>3B</td>
+            </tr>
+        </table>
+
+        <h1>Tabela Linha Mesclada</h1>
+
+        <table border="1", width="300">
+            <tr>
+                <td rowspan="2">1A</td><td>1B</td>
+            </tr>
+            <tr>
+                <td>2B</td>
+            </tr>
+            <tr>
+                <td>3A</td> <td>3B</td>
+            </tr>
+        </table>
+
+
+        <h2>Tabela Linha Mesclada Coluna 2</h2>
+
+        <table border="1", width="300">
+            <tr>
+                <td>1A</td><td rowspan="2">1B</td>
+            </tr>
+            <tr>
+                <td>2A</td>
+            </tr>
+            <tr>
+                <td>3A</td> <td>3B</td>
+            </tr>
+        </table>
+
+
 </body>
 </html>
