--- a/16_Formularios/01_buscas.html
+++ b/16_Formularios/01_buscas.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Formulário de busca</h1>
-    <form action="https://www.google.com/search" method="get">
+    <form action="https://www.google.com/search" method="get" target="_blank">
         <label for="busca">Faça uma busca</label>
         <input type="text" name="q" id="busca">
         <input type="submit" value="OK">
