Formulario Login Final

--- a/16_Formularios/03_login_final.html
+++ b/16_Formularios/03_login_final.html
@@ -18,7 +18,13 @@
             <input type="text" id="user" required autofocus>
             <label for="pass">Senha</label>
             <input type="password" id="pass" required>
-            <input type="submit" value="Entrar" class="btn">
+
+            <div class="action">
+                <input type="reset" value="Limpar" class="btn btn--apagar">
+                <input type="submit" value="Entrar" class="btn">
+            </div>
+
+
         </fieldset>
     </form>
     
