Continuacao Projeto Modaora

--- a/15_Projeto-ModaOra/index.html
+++ b/15_Projeto-ModaOra/index.html
@@ -13,7 +13,7 @@
     <div class="container top_container">
         <header class="header_top">
             <p>Moda Ora</p>
-            <ul>
+            <ul class="header_nav">
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Sobre Nós</a></li>
                 <li><a href="#">Contato</a></li>
@@ -37,7 +37,7 @@
                             <img src="imagens/modelo5.jpg" alt="Vest Romasa">
                         </div>
                         <div class="list_models_text">    
-                            <p>Vest Romasa</p>
+                            <p><span class="models_title">Vest Romasa</span></p>
                             <p>Fort & carismático</p>
                         </div>
                     </li>
@@ -47,7 +47,7 @@
                             <img src="imagens/modelo2.jpg" alt="Jacket Fima">
                         </div>
                         <div class="list_models_text">    
-                            <p>Jacket Fima</p>
+                            <p><span class="models_title">Jacket Fima</span></p>
                             <p>Personalidade marcante</p>
                         </div>
                     </li>
@@ -57,7 +57,7 @@
                             <img src="imagens/modelo4.jpg" alt="Jacket black kira">
                         </div>
                         <div class="list_models_text">    
-                            <p>Jacket black kira</p>
+                            <p><span class="models_title">Jacket black kira</span></p>
                             <p>Empoderamento atraente</p>
                         </div>
                     </li>
