Projeto Form Contato Fim

--- a/17_Projeto_Formulario_contato/contato.html
+++ b/17_Projeto_Formulario_contato/contato.html
@@ -37,7 +37,7 @@
                         required
                         maxlength="1000"
                         minlength="20"
-                        placeholder="conte-nos tudo"></textarea>
+                        placeholder="Conte-nos tudo"></textarea>
 
             <button type="submit" class="btn">Enviar</button>
         </fieldset>
