Pseudo-classes Parentesco-1

--- a/19_CSS_Seletores/03_pseudo-classes_child.html
+++ b/19_CSS_Seletores/03_pseudo-classes_child.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Pseudo-Classes Parentesco</title>
-    <link rel="stylesheet" href="styles/pseudo-classes_parentesco.css">
+    <link rel="stylesheet" href="styles/pseudo-classes_child.css">
 </head>
 <body>
+    <div>
+        <p>Primeiro paragrafo</p>
+        <p>Segundo paragrafo</p>
+        <p>Terceiro paragrafo</p>
+    </div>
+    <hr>
+    <div>
+        <h4>Primeiro titulo</h4>
+        <p>Segundo paragrafo</p>
+        <p>Terceiro paragrafo</p>
+    </div>
+    <hr>
+    <div>
+
+        <a href="#">Primeiro Link</a>
+        <p>Segundo paragrafo</p>
+        <br>
+        <p>Terceiro paragrafo</p>
+        <p>Quarto paragrafo</p>
+        <p>Quinto paragrafo</p>
+        <h3>Isso é um titulo, é não um paragrafo</h3>
+    </div>
+
+
+    <ul>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+    </ul>
+
+
+
     
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
 </body>
 </html>
