Resolucao exc Pseudo-Classes - child-n pt-2

--- a/19_CSS_Seletores/03_pseudo-classes_child.html
+++ b/19_CSS_Seletores/03_pseudo-classes_child.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <ul>
+    <ul impar-par>
         <li>Item de lista</li>
         <li>Item de lista</li>
         <li>Item de lista</li>
@@ -42,11 +42,23 @@
         <li>Item de lista</li>
     </ul>
 
-
-
-    
     <br>
     <br>
+    <h3>NTH-CHILD xN com NOT</h3>
+    <ul child-n>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+        <li>Item de lista</li>
+    </ul>
+
     <br>
     <br>
     <br>
