pseudo-classes-elementos pt2

--- a/19_CSS_Seletores/07_pseudo-classes-elementos.html
+++ b/19_CSS_Seletores/07_pseudo-classes-elementos.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="styles/pseudo-classes-elementos.css">
 </head>
 <body>
+
+    <div id="top">
+    <a href="#titulo">Vai para o titulo</a>
+    <br>
     <button>Vai</button><br>
     <button disabled>Vai Disable</button>
+    </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, magni.</p>
     <!-- Se houver espaço dentro de um elemento, a pseudo-classe
     'empty' não vai funcionar, pois com espaço, não é VAZIO! -->
@@ -35,5 +40,28 @@
         <input type="text" value="valor" readonly><br><br>
         <input type="text" placeholder="placeholder"><br><br>
     </form>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet.</p>
+      
+    </div>
+    <hr>
+    <div>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+
+        <!-- 'contenteditable' o padrão é: true -->
+        <p contenteditable="">Paragrafo editável</p>
+    </div>
+    <hr>
+
+    <div id="titulo">
+        <h1>Titulo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur eaque, beatae velit natus ex quisquam quod pariatur! Sunt quam distinctio perspiciatis iusto nesciunt nobis magni totam dignissimos, suscipit non tenetur.</p>
+        <a href="#top">Vai para o top</a>
+    </div>
+    
+    <br><br><br><br>
+    <br><br><br><br>
 </body>
 </html>
