--- a/19_CSS_Seletores/07_pseudo-classes-elementos.html
+++ b/19_CSS_Seletores/07_pseudo-classes-elementos.html
@@ -10,6 +10,8 @@
     <div id="top">
     <a href="#titulo">Vai para o titulo</a>
     <br>
+    <a href="#pseudoelementos">Vai para os pseudo-elementos</a>
+    <br>
     <button>Vai</button><br>
     <button disabled>Vai Disable</button>
     </div>
@@ -61,7 +63,15 @@
         <a href="#top">Vai para o top</a>
     </div>
     
-    <br><br><br><br>
-    <br><br><br><br>
+    <hr><hr><hr><hr><hr>
+
+ 
+    <div class="pseudoelemento">
+        <h1 id="pseudoelementos">Abaixo aqui Pseudo-Elementos</h1>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis dolorum sed dolores, reiciendis aliquid optio excepturi. Commodi, rem dolorem beatae alias a non dicta iste.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <a href="#">Clique aqui para saber outra coisa!</a> Debitis dolorum sed dolores, reiciendis aliquid optio excepturi. Commodi, rem dolorem beatae alias a non dicta iste.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis dolorum sed dolores, reiciendis aliquid optio excepturi. Commodi, rem dolorem beatae alias a non dicta iste.</p>
+    </div>
 </body>
 </html>
