Projeto Modaora - Atualizacao

--- a/15_Projeto-ModaOra/index.html
+++ b/15_Projeto-ModaOra/index.html
@@ -68,8 +68,10 @@
     
     <section class="container end_container">
         <article class="end_content">
-            <h2>Quando os detalhes importam simplesmente moda</h2>
-            <p>Sabemos que, para muitas pessoas, a moda é mais do que simplesmente vestir roupas. É uma forma de expressão e uma maneira de mostrar ao mundo quem você é. É por isso que nos esforçamos para oferecer peças que atendam aos mais altos padrões de qualidade e estilo. Desde a escolha dos materiais até a criação de cada detalhe, nossa equipe se dedica a produzir roupas que se destacam pela sua elegância e sofisticação. Aqui, você encontrará peças que unem o melhor da moda com a atenção aos detalhes que faz toda a diferença. Descubra uma nova forma de se expressar através da moda conosco.</p>
+            <div class="end_content__text">
+                <h2>Quando os detalhes importam simplesmente moda</h2>
+                <p>Sabemos que, para muitas pessoas, a moda é mais do que simplesmente vestir roupas. É uma forma de expressão e uma maneira de mostrar ao mundo quem você é. É por isso que nos esforçamos para oferecer peças que atendam aos mais altos padrões de qualidade e estilo. Desde a escolha dos materiais até a criação de cada detalhe, nossa equipe se dedica a produzir roupas que se destacam pela sua elegância e sofisticação. Aqui, você encontrará peças que unem o melhor da moda com a atenção aos detalhes que faz toda a diferença. Descubra uma nova forma de se expressar através da moda conosco.</p>
+            </div>
         </article>
     </section>
 
