Final Projeto ModaOra

--- a/15_Projeto-ModaOra/index.html
+++ b/15_Projeto-ModaOra/index.html
@@ -75,8 +75,10 @@
         </article>
     </section>
 
-    <footer class="container footer_container">
-        Copyright © modaora.com
-    </footer>
+    <div class="container footer_container">
+        <footer class="footer">
+            Copyright &copy; modaora.com
+        </footer>
+    </div>
 </body>
 </html>
