CheckBox Transform Fim

--- a/20_Transformacoes_2D/04_checkbox.html
+++ b/20_Transformacoes_2D/04_checkbox.html
@@ -41,7 +41,27 @@
     </label>
 
     <label class="lbl2">
-        <input type="checkbox" class="lblchk">
+        <input type="checkbox">
+        <span></span>
+        Javascript
+    </label>
+
+    <hr>
+
+    <label class="switch">
+        <input type="checkbox">
+        <span></span>
+        HTML
+    </label>
+
+    <label class="switch">
+        <input type="checkbox">
+        <span></span>
+        CSS
+    </label>
+
+    <label class="switch">
+        <input type="checkbox">
         <span></span>
         Javascript
     </label>
