Projeto - MyComponents pt2

--- a/21_Projeto_MyComponents/index.html
+++ b/21_Projeto_MyComponents/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="main_header">
+        <nav class="main_nav">
             <a href="#">
-                <img src="imagens/perfil.png" alt="João da Silva Sauro">
+                <img src="imagens/perfil.png" alt="João da Silva Sauro" class="perfil_img">
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h1>My Components</h1>
         <article>
             <h2>A sua área para armazenar seus códigos HTML e CSS</h2>
