Projeto MyComponents - Tipografia  pt3

--- a/21_Projeto_MyComponents/tipografia.html
+++ b/21_Projeto_MyComponents/tipografia.html
@@ -99,6 +99,35 @@
                             Firefox foi lançado em 2004 e se tornou um grande sucesso.</q>
                     </p>
             </article>
+
+            <article>
+                <h4>Coisas de informática</h4>
+
+                <!-- Serve para colocar código de programação -->
+                <p>A propriedade <code>background</code> do CSS serve para colocar uma imagem de fundo.</p>
+
+                    <!-- Serve para colocar texto, e manter as formatações que o programador quiser -->
+                <pre>
+         Esse texto é um texto pré-formatado.
+                </pre>
+
+<pre><code>
+    h1{
+        font-size: 4rem;
+        color: #9e9e9e;
+        margin-top: 2rem;
+        margin-bottom: 3rem;
+}
+</code></pre>
+
+            <p>
+                Após executar o método <code>push()</code> obtive o retorno <samp lang="en-US">undefined has not a push() function</samp>
+            </p>
+
+            <p>
+                Pressione as teclas <kbd>CRTL</kbd> + <kbd>C</kbd> do seu teclado para copiar o conteúdo.
+            </p>
+            </article>
         </section>
 
 
