MyComponents - Cards pt2

--- a/21_Projeto_MyComponents/cards.html
+++ b/21_Projeto_MyComponents/cards.html
@@ -41,9 +41,31 @@
                     <img src="imagens/fulls/01.jpg" alt="Imagem">
                     <div class="card_content">
                         <h3 class="card_title">Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, ex.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sed voluptas, aspernatur vel velit modi.</p>
                     </div>
                 </article>
+            </div>
+        </section>
+
+        <section>
+            <h3>2 Cards</h3>
+            <div class="row">
+                <article class="card">
+                    <img src="imagens/fulls/02.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis atque repellendus inventore ad. Rem, itaque!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/03.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
+
             </div>
         </section>
 
