--- a/21_Projeto_MyComponents/cards.html
+++ b/21_Projeto_MyComponents/cards.html
@@ -65,7 +65,72 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
                     </div>
                 </article>
+            </div>
+        </section>
 
+        <section>
+            <h3>3 Cards</h3>
+            <div class="row">
+                <article class="card">
+                    <img src="imagens/fulls/04.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis atque repellendus inventore ad. Rem, itaque!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/05.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/06.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section>
+            <h3>4 Cards</h3>
+            <div class="row">
+                <article class="card">
+                    <img src="imagens/fulls/01.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis atque repellendus inventore ad. Rem, itaque!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/02.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/03.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="imagens/fulls/04.jpg" alt="Imagem">
+                    <div class="card_content">
+                        <h3 class="card_title">Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere totam recusandae maxime nihil? Nisi, voluptate!</p>
+                    </div>
+                </article>
             </div>
         </section>
 
