Projeto - Mycomponents - Form. pt2

--- a/21_Projeto_MyComponents/formulario.html
+++ b/21_Projeto_MyComponents/formulario.html
@@ -46,7 +46,7 @@
                         </div>
                         <div>
                             <label for="email">Email:</label>
-                            <input type="email" name="email" id="email" placeholder="Digite seu email">
+                            <input type="email" name="email" id="email" placeholder="Digite seu email" autocomplete="off">
                         </div>
                     </div>
 
