Projeto - MyComponents - Icons - FinalProjeto

--- a/21_Projeto_MyComponents/index.html
+++ b/21_Projeto_MyComponents/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 
     <title>Projeto My Components</title>
+    <link rel="stylesheet" href="assets/icomoon-svg/style.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/index.css">
 </head>
@@ -37,14 +38,12 @@
         <address>
             <h3>Venha conhecer nossas redes sociais</h3>
                 <p>
-                    <a href="#">Youtube</a>
-                    <a href="#">Instagram</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Linkedin</a>
+                    <a href="#" class="link-icon"><svg class="icon"><use xlink:href="assets/icomoon-svg/symbol-defs.svg#icon-youtube"></use></svg>Youtube</a>
+                    <a href="#" class="link-icon"><svg class="icon"><use xlink:href="assets/icomoon-svg/symbol-defs.svg#icon-instagram"></use></svg>Instagram</a>
+                    <a href="#" class="link-icon"><svg class="icon"><use xlink:href="assets/icomoon-svg/symbol-defs.svg#icon-twitter"></use></svg>Twitter</a>
+                    <a href="#" class="link-icon"><svg class="icon"><use xlink:href="assets/icomoon-svg/symbol-defs.svg#icon-linkedin"></use></svg>Linkedin</a>
                 </p>
         </address>
     </main>
-
 </body>
-
 </html>
